# magnesium-oxide

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  true
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codacy.yml  docker-publish.yml  rust-dev.yml  rust-prod.yml  rust.yml
src/: config.rs  crypter.rs  crypto.rs  log.rs  main.rs  startup.rs  structs.rs
src/modules/: config.rs  crypto.rs  hashing.rs  mod.rs  storage.rs
src/routes/: index.rs  mod.rs
src/routes/api/: mod.rs
src/routes/api/v1/: files.rs  mod.rs  users.rs
src/routes/v1/: files.rs  types.rs  users.rs  utils.rs
src/routes/views/: index.rs  mod.rs
src/templates/: index.html
