[package]
name = "magnesium-oxide"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-multipart = "0.4.0"
actix-web = "4.0.1"
aes-gcm-siv = "0.10.3"
base64 = "0.13.0"
bitflags = "1.3.2"
bson = { version = "2.3.0", features = ["serde_with", "chrono-0_4"] }
bytes = { version = "1.1.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
futures-util = { version = "0.3.21", features = ["tokio-io"] }
log = "0.4.17"
mongodb = "2.2.2"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha3 = "0.10.1"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.5.9"
uuid = { version = "1.1.1", features = ["v4", "serde"] }