[package]
name = "magnesium-oxide"
version = "0.6.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-multipart = "0.4.0"
actix-web = { version = "4.1.0", features = ["rustls"] }
aes-gcm-siv = "0.10.3"
base64 = "0.13.0"
bitflags = "1.3.2"
bson = { version = "2.3.0", features = ["serde_with", "chrono-0_4"] }
bytes = { version = "1.1.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.10.0"
futures-util = { version = "0.3.21", features = ["tokio-io"] }
rust-s3 = { version = "0.31.0", features = ["tokio-rustls-tls", "no-verify-ssl"], default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
mongodb = "2.2.2"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sha3 = "0.10.1"
tera = "1.16.0"
tokio = { version = "1.19.2", features = ["full"] }
toml = "0.7.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
